# taxi-destination-prediction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yaml
notebooks/: CLUSTERING_LABEL_ENCODING.ipynb  CLUSTER_MODEL.ipynb  EDA.ipynb  FEATURE_ENCODING.ipynb  MODEL.ipynb  MODEL_DUMP.ipynb  MULTIOUTPUT_MODEL.ipynb  PREPROCESSING.ipynb
src/: main.py  test.py
src/modelling/: model.py
src/models/: model.py
src/preprocessing/: __init__.py  data_cleaning.py  dataingestion.py  geo_spatial.py  preprocess_data.py  setup.py  utils.py
src/utils/: decorators.py
