[tool.poetry]
name = "taxi-destination-prediction"
version = "0.1.0"
description = ""
authors = ["Julia Clarke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
