[tool.poetry]
name = "taxi-destination-prediction"
version = "0.1.0"
description = ""
authors = ["Julia Clarke"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
dask = "^2025.3.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
awswrangler = "^3.11.0"
dask-ml = "^2025.1.0"
geojson = "^3.2.0"
shapely = "^2.1.0"
tensorflow = "^2.19.0"
keras = "^3.9.2"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
